k8s/orderhistory-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderhistory-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderhistoryservice
  template:
    metadata:
      labels:
        app: orderhistoryservice
    spec:
      containers:
        - name: orderhistoryservice
          image: tcortega/orderhistoryservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: ordershistory-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: orderhistoryservice
  ports:
    - name: orderhistoryservice
      protocol: TCP
      port: 80
      targetPort: 80
