k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: tcortega/orderservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: orders-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: orderservice
  ports:
    - name: orderservice
      protocol: TCP
      port: 80
      targetPort: 80
