k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: arkhi.ftgo.com
      http:
        paths:
          - path: /api/customers
            pathType: Prefix
            backend:
              service:
                name: customers-clusterip-srv
                port:
                  number: 80
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders-clusterip-srv
                port:
                  number: 80
          - path: /api/kitchens
            pathType: Prefix
            backend:
              service:
                name: kitchens-clusterip-srv
                port:
                  number: 80 
          - path: /api/deliveries
            pathType: Prefix
            backend:
              service:
                name: deliveries-clusterip-srv
                port:
                  number: 80 
          - path: /api/ordershistory
            pathType: Prefix
            backend:
              service:
                name: ordershistory-clusterip-srv
                port:
                  number: 80
